# phoenix-sdr-utils

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  phoenix-build.json  refactoring-23-dec-2025.md
.github/: copilot-instructions.md
docs/: DSP_EXTRACTION_PLAN.md  IQR_FORMAT.md
src/: simple_am_receiver.c
